# appcompatibilityhelper

./: .gitignore  CMakeLists.txt  Containerfile  Justfile  Messages.sh  README.MD  filotimo-appcompatibilityhelper.spec  org.filotimoproject.appcompatibilityhelper.desktop  org.filotimoproject.windowsapphelper.desktop
po/: CMakeLists.txt  appcompatibilityhelper.pot
src/: CMakeLists.txt  CompatibilityHelperFactory.cpp  CompatibilityHelperFactory.h  DebCompatibilityHelper.cpp  DebCompatibilityHelper.h  ICompatibilityHelper.cpp  ICompatibilityHelper.h  PackageUtils.cpp  PackageUtils.h  RpmCompatibilityHelper.cpp  RpmCompatibilityHelper.h  WindowsAppHelper.cpp  WindowsAppHelper.h  WindowsCompatibilityHelper.cpp  WindowsCompatibilityHelper.h  directories.h.in  main.cpp
src/contents/ui/: Main.qml
